# autogen/openapi_server/models/__init__.py
@@ -7,6 +7,7 @@ from openapi_server.models.basin_full import BasinFull
 from openapi_server.models.basin_short import BasinShort
 from openapi_server.models.building_full import BuildingFull
 from openapi_server.models.security_img import SecurityImg
+from openapi_server.models.security_location import SecurityLocation
 from openapi_server.models.station_anual import StationAnual
 from openapi_server.models.station_full import StationFull
 from openapi_server.models.station_short import StationShort
