# controller.py
@@ -48,6 +48,16 @@ def get_security_image(security_id):
     else:
         abort(404)
 
+def get_security_location(location_id):
+    cs = db.cursor()
+    cs.execute("""SELECT p.id, building, security_id as security_post_id, img_link, s.lat,s.lon,distance
+                  FROM kuPlace as p inner join kuSecurity as s
+                  on s.location_id = p.id
+                  where p.id = %s
+                  ORDER BY p.id""", [location_id])
+    result = [models.SecurityLocation(location_id, name) for location_id, name in cs.fetchall()]
+    cs.close()
+    return result
 
 def get_basins():
     cs = db.cursor()
